--- a/shopping.html
+++ b/shopping.html
@@ -15,7 +15,7 @@
 
     </ul>
     <br>
-    <button oneClick="placeOrder()">Place Order</button>
+    <button onclick="placeOrder()">Place Order</button>
 
     <script src="shoping.js"></script>
 </body>
